# cairn-rs

./: .dockerignore  .env.bak  .env.example  .gitignore  AGENTS.md  CHANGELOG-session.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HANDOVER.md  LICENSE  Makefile  NOTICE  PROMPT.md  RALPH-PROGRESS.md  README.md  SECURITY.md  docker-compose.postgres.yml  docker-compose.yml  github-app.pem  rust-toolchain.toml
crates/cairn-agent/: Cargo.toml
crates/cairn-agent/src/: executor.rs  hooks.rs  lib.rs  streaming.rs
crates/cairn-agent/tests/: streaming_guard.rs
crates/cairn-api/: Cargo.toml
crates/cairn-api/src/: admin.rs  assistant.rs  auth.rs  bootstrap.rs  config_api.rs  endpoints.rs  evals_api.rs  external_workers.rs  feed.rs  fleet.rs  graph_api.rs  http.rs  lib.rs  memory_api.rs  onboarding.rs  operator.rs  overview.rs  policies_api.rs  prompts_api.rs  provenance.rs  providers_api.rs  read_models.rs  settings_api.rs  skills_api.rs  sources_channels.rs  sse.rs  sse_payloads.rs  sse_publisher.rs
crates/cairn-api/tests/: api_docs_coverage.rs  compat_catalog_sync.rs  evals_provenance_wiring.rs  feed_wiring.rs  http_boundary_alignment.rs  llm_traces_route.rs  memory_wiring.rs  migration_report_consistency.rs  onboarding_flow_e2e.rs  phase0_fixture_shapes.rs  product_surface_composition.rs  sse_event_contract.rs  sse_payload_alignment.rs
crates/cairn-app/: Cargo.toml  build.rs
crates/cairn-app/src/: bin_admin.rs  bin_events.rs  bin_export.rs  bin_frontend.rs  bin_handlers.rs  bin_health.rs  bin_providers.rs  bin_router.rs  bin_seed.rs  bin_state.rs  bin_types.rs  bin_websocket.rs  bootstrap.rs  bundles.rs  entitlements.rs  errors.rs  extractors.rs  fabric_adapter.rs  helpers.rs  lib.rs  main.rs  marketplace_routes.rs  metrics.rs  metrics_otel.rs  metrics_tap.rs  middleware.rs  openapi_spec.rs  repo_routes.rs  router.rs  sandbox.rs  sse_hooks.rs  state.rs  telemetry_routes.rs  templates.rs  tokens.rs  tool_impls.rs  tracing_emitter.rs  trigger_routes.rs  triggers.rs  validate.rs
crates/cairn-app/tests/: README.md  bootstrap_server.rs  bootstrap_smoke.rs  e2e_lifecycle.rs  entitlement_gates.rs  eval_memory_matrix.rs  full_workspace_suite.rs  guardrail_matrix.rs  metrics_core.rs  metrics_otel.rs  metrics_providers.rs  provider_lifecycle_e2e.rs  register_repo_tool.rs  request_tracing.rs  session_resolver.rs  skill_health_matrix.rs  source_refresh.rs  sse_streaming_e2e.rs  system_status.rs  tenant_overview.rs  test_approval_propose_then_await.rs  test_chaos_subprocess.rs  test_drain_approved_executes_bash.rs  test_f29_cd2_cost_rollups.rs  test_f29_cd_observability.rs  test_f30_orchestrator_termination.rs  test_f31_run_state_consistency.rs  test_f34a_memory_search_vector_guard.rs  test_f35_tool_errors_as_feedback.rs  test_f36_simple_prompt_completes.rs  test_f37_fence_triple.rs  test_f38_complete_run_actually_invoked.rs  test_f40_provider_delete_recreate.rs  test_f41_orchestrate_activates_run.rs  test_f42_run_prompt_threading.rs  test_f44_tool_call_approvals_list_pending.rs  test_f46_tool_result_feedback.rs  test_f47_completion_verification_sse.rs  test_f47_pr2_persistence.rs  test_f49_f50_f52_f53_polish.rs  (+49 more)
crates/cairn-domain/: Cargo.toml
crates/cairn-domain/assets/: models.toml
crates/cairn-domain/src/: agent_roles.rs  approvals.rs  audit.rs  bandit.rs  channel.rs  checkpoint_strategy.rs  commands.rs  commercial.rs  compaction.rs  contexts.rs  credentials.rs  decisions.rs  defaults.rs  errors.rs  evals.rs  events.rs  ids.rs  ingest_job.rs  lib.rs  lifecycle.rs  model_catalog.rs  notification_prefs.rs  observability.rs  onboarding.rs  orchestrator.rs  org.rs  policy.rs  prompts.rs  protocols.rs  provider_registry.rs  providers.rs  quotas.rs  recovery.rs  research.rs  resource_sharing.rs  scheduled_task.rs  selectors.rs  signal.rs  skills.rs  sla.rs  (+7 more)
crates/cairn-domain/tests/: durability_classes.rs  event_envelope.rs  event_exhaustiveness.rs  model_catalog.rs  product_tier_gating.rs  skills_catalog.rs  voice_pipeline.rs
crates/cairn-evals/: Cargo.toml
crates/cairn-evals/src/: lib.rs
crates/cairn-evals/tests/: api_contract_guard.rs  bandit_experiment.rs  baseline_flow.rs  dataset_flow.rs  eval_matrix_coverage.rs  eval_pipeline.rs  graph_scorecard_seam.rs  prompt_eval_slice.rs  rubric_flow.rs  scorecard_flow.rs
crates/cairn-fabric/: Cargo.toml  README.md
crates/cairn-fabric/src/: active_tasks.rs  aggregate.rs  boot.rs  config.rs  constants.rs  error.rs  event_bridge.rs  helpers.rs  id_map.rs  instance_tag_backfill.rs  lease_history_subscriber.rs  lib.rs  signal_bridge.rs  state_map.rs  stream.rs  suspension.rs  test_harness.rs  test_support.rs  version_check.rs  worker_sdk.rs
crates/cairn-fabric/tests/: integration.rs
crates/cairn-github/: Cargo.toml
crates/cairn-github/src/: auth.rs  client.rs  error.rs  lib.rs  webhook.rs
crates/cairn-graph/: Cargo.toml
crates/cairn-graph/src/: eval_projector.rs  event_projector.rs  graph_provenance.rs  in_memory.rs  lib.rs  projections.rs  provenance.rs  queries.rs  retrieval_projector.rs
crates/cairn-graph/tests/: execution_trace_e2e.rs
crates/cairn-harness-tools/: Cargo.toml
crates/cairn-harness-tools/src/: adapter.rs  error.rs  hook.rs  lib.rs  sensitive.rs
crates/cairn-harness-tools/tests/: happy_path.rs  lsp.rs
crates/cairn-integrations/: Cargo.toml
crates/cairn-integrations/src/: config.rs  github.rs  lib.rs  linear.rs  local_fs.rs  notion.rs  obsidian.rs  types.rs  webhook.rs
crates/cairn-memory/: Cargo.toml
crates/cairn-memory/src/: api_impl.rs  bundles.rs  deep_search.rs  deep_search_impl.rs  diagnostics.rs  diagnostics_impl.rs  entity_extraction.rs  export_service_impl.rs  feed_impl.rs  format_parsers.rs  graph_expansion.rs  graph_ingest.rs  import_service_impl.rs  in_memory.rs  (+6 more)
crates/cairn-orchestrator/: Cargo.toml
crates/cairn-providers/: Cargo.toml
crates/cairn-runtime/: Cargo.toml
crates/cairn-skills/: Cargo.toml
crates/cairn-store/: BACKFILL_ASSUMPTIONS.md  Cargo.toml
crates/cairn-tools/: Cargo.toml
crates/cairn-workspace/: Cargo.toml
(+1204 files in other folders)
