[package]
name = "cairn-api"
version = "0.1.0"
edition = "2021"
license = "Proprietary"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
cairn-agent = { path = "../cairn-agent" }
cairn-domain = { path = "../cairn-domain" }
cairn-tools = { path = "../cairn-tools" }
cairn-evals = { path = "../cairn-evals" }
cairn-graph = { path = "../cairn-graph" }
cairn-runtime = { path = "../cairn-runtime" }
cairn-signal = { path = "../cairn-signal" }
cairn-channels = { path = "../cairn-channels" }
cairn-store = { path = "../cairn-store" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
cairn-memory = { path = "../cairn-memory" }
tokio = { version = "1", features = ["rt", "macros"] }

