[package]
name = "cairn-app"
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"
publish = false

[[bin]]
name = "cairn-app"
path = "src/main.rs"

[[bin]]
name = "smoke_worker"
path = "src/bin/smoke_worker.rs"

[features]
default = []
# Courtesy in-memory backing for Run/Task/Session services. OFF by default
# — the production path is Fabric-backed. Enable to run a fully local,
# event-log-only build with no Valkey dependency (tinkering, unit-test
# binaries).
in-memory-runtime = [
    "cairn-runtime/in-memory-runtime",
    "cairn-orchestrator/in-memory-runtime",
    "cairn-tools/in-memory-runtime",
]

[dependencies]
cairn-api = { path = "../cairn-api" }
cairn-memory = { path = "../cairn-memory" }
cairn-orchestrator = { path = "../cairn-orchestrator" }
cairn-providers = { path = "../cairn-providers" }
cairn-runtime = { path = "../cairn-runtime" }
cairn-fabric = { path = "../cairn-fabric" }
cairn-workspace = { path = "../cairn-workspace" }
cairn-evals = { path = "../cairn-evals" }
cairn-graph = { path = "../cairn-graph" }
cairn-store = { path = "../cairn-store", features = ["postgres", "sqlite"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite"], optional = false }
cairn-domain = { path = "../cairn-domain" }
cairn-tools = { path = "../cairn-tools" }
cairn-github = { path = "../cairn-github" }
cairn-integrations = { path = "../cairn-integrations" }
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"], default-features = false }
url = "2"
utoipa = "5"
uuid = { version = "1", features = ["v4"] }
rustls = "0.22"
rustls-pemfile = "2"
x509-parser = "0.16"
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
dotenvy = "0.15"
aes-gcm = "0.10"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
http-body-util = "0.1"
