[package]
name = "cairn-app"
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"
publish = false

[[bin]]
name = "cairn-app"
path = "src/main.rs"

[[bin]]
name = "smoke_worker"
path = "src/bin/smoke_worker.rs"

[features]
default = ["metrics-core"]

# Operational Prometheus metrics: run/task lifecycle counters, tool
# invocations, projection lag, tenant-scoped queue depths. Low cardinality,
# no external deps. Enabled by default — disable only for the most
# resource-constrained embedded builds. The base HTTP surface metrics
# (request_totals, request_duration histogram) are unconditional.
metrics-core = []

# LLM provider-call counter + duration histogram labelled by
# provider + model + operation_kind. Separated from core because
# model-name labels can grow unbounded in promiscuous deployments.
# Opt-in.
metrics-providers = []

# OTLP span export for cairn's RuntimeEvent stream (RFC 021).
# HTTP/protobuf transport; every OTLP-compatible backend
# (Langfuse, Grafana Tempo, Jaeger, Datadog, Phoenix, Honeycomb)
# accepts it. Pulls in `opentelemetry-proto` + `prost`.
# Opt-in.
metrics-otel = ["dep:opentelemetry-proto", "dep:prost"]

# ── SECURITY-SENSITIVE FEATURE — READ BEFORE ENABLING ─────────────────
#
# Enables GET /v1/admin/debug/partition, an admin-only introspection
# endpoint that returns the FF ExecutionId and Valkey partition index
# for a given run or task. Used by the RFC-011 co-location integration
# tests; NOT intended for production.
#
# What turning this on exposes to an authenticated admin caller:
#   * The FF-internal ExecutionId (previously never on any HTTP surface).
#     An attacker with both a compromised admin token AND Valkey access
#     could target `exec_core:{fp:N}:<uuid>` keys directly, bypassing
#     cairn-side tenant scoping.
#   * The Valkey partition index for any run/task. Repeated queries
#     can be used to map tenant → partition distribution, revealing
#     hot-shard patterns useful for targeted DoS.
#   * The derivation code path (`session_flow` vs `solo`), leaking
#     structural details of the task-session relationship.
#
# Mitigations if you still need to enable this in production:
#   1. Restrict admin token distribution to ops personnel only.
#   2. Monitor the request log for /v1/admin/debug/* access patterns.
#   3. Prefer turning it on for a diagnostic window, then rebuilding
#      and redeploying without the feature.
#
# Default: OFF. CI integration tests build with this feature; release
# artefacts do not. See SECURITY.md for the full threat-model summary.
debug-endpoints = ["dep:ff-core"]

[dependencies]
cairn-api = { path = "../cairn-api" }
cairn-memory = { path = "../cairn-memory" }
cairn-orchestrator = { path = "../cairn-orchestrator" }
cairn-providers = { path = "../cairn-providers" }
cairn-runtime = { path = "../cairn-runtime" }
cairn-fabric = { path = "../cairn-fabric" }
cairn-workspace = { path = "../cairn-workspace" }
cairn-evals = { path = "../cairn-evals" }
cairn-graph = { path = "../cairn-graph" }
cairn-store = { path = "../cairn-store", features = ["postgres", "sqlite"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite"], optional = false }
cairn-domain = { path = "../cairn-domain" }
cairn-tools = { path = "../cairn-tools" }
cairn-github = { path = "../cairn-github" }
cairn-integrations = { path = "../cairn-integrations" }
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
url = "2"
utoipa = "5"
uuid = { version = "1", features = ["v4", "v7"] }
rustls = "0.22"
rustls-pemfile = "2"
x509-parser = "0.16"
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
dotenvy = "0.15"
aes-gcm = "0.10"
sha2 = "0.10"

# metrics-otel: OTLP HTTP/protobuf transport. `opentelemetry-proto`
# gives us the generated prost structs (ExportTraceServiceRequest +
# transitive span types); `prost` supplies the encode/decode traits.
# Both optional — only compiled when `metrics-otel` is enabled.
opentelemetry-proto = { version = "0.31", features = ["gen-tonic-messages", "trace"], optional = true, default-features = false }
prost = { version = "0.14", optional = true }
# Optional: only compiled when `debug-endpoints` feature is enabled.
# Used by the RFC-011 debug endpoint to compute partition placement.
# Must track cairn-fabric's ff-core version so debug.rs's types match
# FabricServices.runtime.partition_config.
ff-core = { version = "0.2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util"] }
http-body-util = "0.1"
# Chaos test only: `libc::kill` to deliver SIGSTOP/SIGCONT to the live
# cairn-app subprocess without pulling `nix`. std's `Child::kill` only
# sends SIGKILL; a raw libc FFI call is the minimal portable shim for
# arbitrary signals on POSIX. Test-only, never reaches the binary.
libc = "0.2"
# Turn on the testcontainers-backed Valkey harness so HTTP integration
# tests under `tests/integration/` can point the spawned cairn-app
# subprocess at a shared live Valkey.
cairn-fabric = { path = "../cairn-fabric", features = ["test-harness"] }
uuid = { version = "1", features = ["v4", "v7"] }
# Full-binary HTTP driver for LiveHarness — tests launch the real
# `cairn-app` binary on an ephemeral port and drive it via reqwest.
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
