[package]
name = "cairn-domain"
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
toml = { version = "0.8", default-features = false, features = ["parse"] }
