[package]
name = "cairn-evals"
version = "0.1.0"
edition = "2021"
license = "Proprietary"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
cairn-domain = { path = "../cairn-domain" }
cairn-graph = { path = "../cairn-graph" }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

