[package]
name = "cairn-fabric"
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"
publish = false

[features]
default = []
# Expose the Valkey testcontainers harness under `cairn_fabric::test_harness`.
# Off by default — production binaries never link testcontainers. Consumers
# that run live-Valkey integration tests (cairn-fabric's own test binary,
# cairn-app's HTTP integration tests) turn this on via dev-dependencies.
test-harness = ["dep:testcontainers", "dep:url"]

[dependencies]
# FlowFabric crates — consumed from crates.io at 0.3.2 family.
# RFC-012 Stage 1a: EngineBackend trait + EngineError crate-move from
# ff-sdk to ff-core. ScannerFilter { namespace, instance_tag } added for
# cross-instance isolation (FF#122). `ScriptError` is `#[non_exhaustive]`;
# cairn never matches exhaustively. Edition bumped to 2024 in FF; cairn
# builds under edition 2021 unaffected. Bumping the minor version across
# all FF crates requires lockstep updates here — they share internal API
# surface.
ff-core = "0.3"
ff-sdk = "0.3"
ff-engine = "0.3"
ff-scheduler = "0.3"
ff-script = "0.3"
ff-backend-valkey = "0.3"
# Needed for `Engine::start_with_completions` which takes an
# `Arc<ff_observability::Metrics>`. ff-engine does NOT re-export the
# type; pulled in at the same version to stay lock-step with FF's
# internal minor-version churn.
ff-observability = "0.3"
# ferriskey 0.3 ships alongside FF 0.3 family. Must share a single
# version with FF crates to avoid duplicate-crate type mismatches.
ferriskey = "0.3"

# Cairn crates
cairn-domain = { path = "../cairn-domain" }
cairn-store = { path = "../cairn-store" }

# External
uuid = { version = "1", features = ["v4", "v5", "serde"] }
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
tokio-util = "0.7"
tracing = "0.1"
serde_json = "1"
thiserror = "2"
# `async-trait` is required for `Engine` (the cairn-side abstraction
# over FF's read surface) because cairn needs `Arc<dyn Engine>` for
# runtime polymorphism. Native `async fn` in traits (Rust 1.75+) is
# not yet dyn-dispatchable without per-method `Pin<Box<dyn Future>>`
# boilerplate. When that restriction lifts we can drop this dep.
async-trait = "0.1"
# Gated behind `test-support` — pulled in only when the harness is needed.
testcontainers = { version = "0.23", optional = true }
url = { version = "2", optional = true }

[dev-dependencies]
# Own integration suite consumes the same harness via the feature.
cairn-fabric = { path = ".", features = ["test-harness"] }
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
uuid = { version = "1", features = ["v4"] }
# `test_orchestrator_stream` imports `TaskFrameSink` from the
# orchestrator crate to prove the sink-wire reaches FF's stream via
# the real blanket impl (not a mock). Dev-only — library code in
# cairn-fabric does not depend on cairn-orchestrator.
cairn-orchestrator = { path = "../cairn-orchestrator" }
# Needed by `test_scanner_filter_upstream` to `.next()` on FF's
# `CompletionStream`. Dev-only — production cairn-fabric consumes the
# stream via `ff_engine::Engine::start_with_completions`, which does
# its own hand-rolled `poll_next` loop and doesn't pull `futures` in.
futures = "0.3"
