[package]
name = "cairn-fabric"
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"
publish = false

[features]
default = []
# Expose the Valkey testcontainers harness under `cairn_fabric::test_harness`.
# Off by default — production binaries never link testcontainers. Consumers
# that run live-Valkey integration tests (cairn-fabric's own test binary,
# cairn-app's HTTP integration tests) turn this on via dev-dependencies.
test-harness = ["dep:testcontainers", "dep:url"]

[dependencies]
# FlowFabric umbrella crate — CG-a (2026-04-25) collapsed the six
# `ff-*` direct pins into a single `flowfabric = "0.9"` pin (FF#279).
# `valkey` is default; `engine` + `scheduler-internals` expose direct
# access to `ff_engine` / `ff_scheduler` internals that cairn still
# uses (Engine::start_with_completions, ClaimPolicy/ClaimGrant). The
# `ff-observability` pin stays direct because the umbrella does not
# re-export it — `Engine::start_with_completions` takes an
# `Arc<ff_observability::Metrics>` and cairn wires that type through.
flowfabric = { version = "0.9", features = ["engine", "scheduler-internals"] }
# Needed for `Engine::start_with_completions` which takes an
# `Arc<ff_observability::Metrics>`. The flowfabric umbrella does not
# re-export ff-observability.
#
# `enabled` turns on the real OTEL → Prometheus exporter. Without
# this feature `Metrics::render()` returns an empty string (shim),
# and no FF metrics surface on cairn-app's `/metrics` endpoint. The
# shim exists for no-observability embedded builds; cairn is never
# that, so we always want the real backend.
ff-observability = { version = "0.9", features = ["enabled"] }
# ferriskey 0.9 ships alongside FF 0.9 family. Still a direct pin in
# CG-a because `lease_history_subscriber.rs` uses `ferriskey::Client`
# directly for the raw XREAD loop. CG-b adopts
# `EngineBackend::subscribe_lease_history` (FF#282) and drops this
# pin entirely — do not rely on `ferriskey` in new CG-a code.
ferriskey = "0.9"

# Cairn crates
cairn-domain = { path = "../cairn-domain" }
cairn-store = { path = "../cairn-store" }

# External
uuid = { version = "1", features = ["v4", "v5", "serde"] }
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
tokio-util = "0.7"
tracing = "0.1"
serde_json = "1"
thiserror = "2"
# `async-trait` is required for `Engine` (the cairn-side abstraction
# over FF's read surface) because cairn needs `Arc<dyn Engine>` for
# runtime polymorphism. Native `async fn` in traits (Rust 1.75+) is
# not yet dyn-dispatchable without per-method `Pin<Box<dyn Future>>`
# boilerplate. When that restriction lifts we can drop this dep.
async-trait = "0.1"
# Gated behind `test-support` — pulled in only when the harness is needed.
testcontainers = { version = "0.23", optional = true }
url = { version = "2", optional = true }

[dev-dependencies]
# Own integration suite consumes the same harness via the feature.
cairn-fabric = { path = ".", features = ["test-harness"] }
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
uuid = { version = "1", features = ["v4"] }
# `test_orchestrator_stream` imports `TaskFrameSink` from the
# orchestrator crate to prove the sink-wire reaches FF's stream via
# the real blanket impl (not a mock). Dev-only — library code in
# cairn-fabric does not depend on cairn-orchestrator.
cairn-orchestrator = { path = "../cairn-orchestrator" }
# Needed by `test_scanner_filter_upstream` to `.next()` on FF's
# `CompletionStream`. Dev-only — production cairn-fabric consumes the
# stream via `ff_engine::Engine::start_with_completions`, which does
# its own hand-rolled `poll_next` loop and doesn't pull `futures` in.
futures = "0.3"
