[package]
name = "cairn-fabric"
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"
publish = false

[features]
default = []
# Expose the Valkey testcontainers harness under `cairn_fabric::test_harness`.
# Off by default — production binaries never link testcontainers. Consumers
# that run live-Valkey integration tests (cairn-fabric's own test binary,
# cairn-app's HTTP integration tests) turn this on via dev-dependencies.
test-harness = ["dep:testcontainers", "dep:url"]

[dependencies]
# FlowFabric umbrella crate — CG-c (2026-04-26) bumped to 0.10 to
# consume FF#322 (typed suspend_by_triple), FF#323 (v1_handle_for_tests
# fixture), and FF#324 (ScannerFilter + typed subscribe_* events).
# `valkey` is default; `engine` + `scheduler-internals` expose direct
# access to `ff_engine` / `ff_scheduler` internals that cairn still
# uses (Engine::start_with_completions, ClaimPolicy/ClaimGrant). The
# `ff-observability` pin stays direct because the umbrella does not
# re-export it — `Engine::start_with_completions` takes an
# `Arc<ff_observability::Metrics>` and cairn wires that type through.
flowfabric = { version = "0.10", features = ["engine", "scheduler-internals"] }
# Needed for `Engine::start_with_completions` which takes an
# `Arc<ff_observability::Metrics>`. The flowfabric umbrella does not
# re-export ff-observability.
#
# `enabled` turns on the real OTEL → Prometheus exporter. Without
# this feature `Metrics::render()` returns an empty string (shim),
# and no FF metrics surface on cairn-app's `/metrics` endpoint. The
# shim exists for no-observability embedded builds; cairn is never
# that, so we always want the real backend.
ff-observability = { version = "0.10", features = ["enabled"] }
# ferriskey 0.10 ships alongside FF 0.10 family. Still a direct pin
# because cairn's Lua-glue control-plane path (signal_bridge, helpers,
# version_check) constructs FCALL ARGV directly against
# `ferriskey::Client`. CG-c migrated `lease_history_subscriber` onto
# typed `EngineBackend::subscribe_lease_history`, but CH-2
# (encapsulation collapse) is a separate PR; the remaining direct
# `ferriskey::Client` users are:
#   - crates/cairn-fabric/src/signal_bridge.rs (FCALL ARGV for signal)
#   - crates/cairn-fabric/src/helpers.rs (FCALL return parsers)
#   - crates/cairn-fabric/src/version_check.rs (FUNCTION LIST probe)
#   - crates/cairn-fabric/src/engine/valkey_control_plane_impl.rs
#     (all legacy Lua FCALLs except suspend, which moved to typed).
# Do not add new direct ferriskey usage; route through the engine
# traits instead.
ferriskey = "0.10"

# Cairn crates
cairn-domain = { path = "../cairn-domain" }
cairn-store = { path = "../cairn-store" }

# External
uuid = { version = "1", features = ["v4", "v5", "serde"] }
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
tokio-util = "0.7"
tracing = "0.1"
serde_json = "1"
thiserror = "2"
# `async-trait` is required for `Engine` (the cairn-side abstraction
# over FF's read surface) because cairn needs `Arc<dyn Engine>` for
# runtime polymorphism. Native `async fn` in traits (Rust 1.75+) is
# not yet dyn-dispatchable without per-method `Pin<Box<dyn Future>>`
# boilerplate. When that restriction lifts we can drop this dep.
async-trait = "0.1"
# Gated behind `test-support` — pulled in only when the harness is needed.
testcontainers = { version = "0.23", optional = true }
url = { version = "2", optional = true }

[dev-dependencies]
# Own integration suite consumes the same harness via the feature.
cairn-fabric = { path = ".", features = ["test-harness"] }
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
uuid = { version = "1", features = ["v4"] }
# `test_orchestrator_stream` imports `TaskFrameSink` from the
# orchestrator crate to prove the sink-wire reaches FF's stream via
# the real blanket impl (not a mock). Dev-only — library code in
# cairn-fabric does not depend on cairn-orchestrator.
cairn-orchestrator = { path = "../cairn-orchestrator" }
# Needed by `test_scanner_filter_upstream` to `.next()` on FF's
# `CompletionStream`. Dev-only — production cairn-fabric consumes the
# stream via `ff_engine::Engine::start_with_completions`, which does
# its own hand-rolled `poll_next` loop and doesn't pull `futures` in.
futures = "0.3"
