[package]
name = "cairn-harness-tools"
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
cairn-domain = { path = "../cairn-domain" }
cairn-tools  = { path = "../cairn-tools" }

# Harness upstream (@agent-sh/harness-*, Rust ports).
harness-core     = "0.1"
harness-bash     = "0.1"
harness-read     = "0.1"
harness-grep     = "0.1"
harness-glob     = "0.1"
harness-write    = "0.1"
harness-webfetch = "0.1"
harness-lsp      = "0.1"

async-trait = "0.1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["rt", "macros", "sync"] }
tracing     = "0.1"
thiserror   = "1"
once_cell   = "1"

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["rt", "macros", "rt-multi-thread", "time"] }
