[package]
name = "cairn-integrations"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"
description = "Integration plugin framework for Cairn — trait-based system for GitHub, Linear, Slack, etc."

[dependencies]
async-trait = "0.1"
cairn-domain = { path = "../cairn-domain" }
cairn-github = { path = "../cairn-github" }
cairn-tools = { path = "../cairn-tools" }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt", "sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
