[package]
name = "cairn-memory"
version = "0.1.0"
edition = "2021"
license = "Proprietary"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
cairn-domain = { path = "../cairn-domain" }
cairn-api = { path = "../cairn-api" }
cairn-graph = { path = "../cairn-graph" }
cairn-store = { path = "../cairn-store" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
utoipa = "5"
chrono = { version = "0.4", features = ["clock"], default-features = false }
sqlx = { version = "0.8", features = ["runtime-tokio", "json"], optional = true }

[dev-dependencies]
cairn-signal = { path = "../cairn-signal" }
tokio = { version = "1", features = ["macros", "rt"] }

[features]
default = []
postgres = ["sqlx", "sqlx/postgres", "cairn-store/postgres"]
sqlite = ["sqlx", "sqlx/sqlite", "cairn-store/sqlite"]
