[package]
name = "cairn-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
cairn-domain   = { path = "../cairn-domain" }
cairn-store    = { path = "../cairn-store" }
cairn-runtime  = { path = "../cairn-runtime" }
cairn-memory   = { path = "../cairn-memory" }
cairn-graph    = { path = "../cairn-graph" }
cairn-tools    = { path = "../cairn-tools" }
async-trait    = "0.1"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tracing        = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio   = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
