[package]
name = "cairn-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
cairn-domain   = { path = "../cairn-domain" }
cairn-store    = { path = "../cairn-store" }
cairn-runtime  = { path = "../cairn-runtime" }
cairn-fabric   = { path = "../cairn-fabric" }
cairn-memory   = { path = "../cairn-memory" }
cairn-graph    = { path = "../cairn-graph" }
cairn-tools    = { path = "../cairn-tools" }
async-trait    = "0.1"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
tracing        = "0.1"

[dev-dependencies]
cairn-providers = { path = "../cairn-providers" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio   = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }

[features]
default = []
# Forwards to cairn-runtime/in-memory-runtime so tests here can construct
# `RunServiceImpl` / `TaskServiceImpl` directly for unit testing. Not
# needed for production runtime use — production wires `Arc<dyn Trait>`
# through AppState.runtime.
in-memory-runtime = ["cairn-runtime/in-memory-runtime"]
