[package]
name = "cairn-orchestrator"
version = "0.1.0"
edition = "2021"

[features]
# Expose the F30 regression-test hooks (`decide_impl_test_hooks`) so
# cross-crate integration tests can reach crate-private prompt
# builders. Never enable on production builds — see
# `src/lib.rs::decide_impl_test_hooks` for the rationale.
test-hooks = []

[dependencies]
cairn-domain   = { path = "../cairn-domain" }
cairn-store    = { path = "../cairn-store" }
cairn-runtime  = { path = "../cairn-runtime" }
cairn-fabric   = { path = "../cairn-fabric" }
cairn-memory   = { path = "../cairn-memory" }
cairn-graph    = { path = "../cairn-graph" }
cairn-tools    = { path = "../cairn-tools" }
cairn-harness-tools = { path = "../cairn-harness-tools" }
async-trait    = "0.1"
futures        = "0.3"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
tracing        = "0.1"
uuid = { version = "1", features = ["v4", "v7"] }

[dev-dependencies]
cairn-providers = { path = "../cairn-providers" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio   = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
