[package]
name = "cairn-providers"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"
description = "LLM provider abstraction for Cairn — chat, completion, embedding, streaming across 12+ backends"
repository = "https://github.com/avifenesh/cairn-rs"

[dependencies]
cairn-domain = { path = "../cairn-domain" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures = "0.3"
tracing = "0.1"
base64 = "0.22"
either = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["rt", "macros"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
httpmock = "0.8"
http = "1"
http-body-util = "0.1"
hyper = "1"
