[package]
name = "cairn-runtime"
version = "0.1.0"
edition = "2021"
license = "Proprietary"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
cairn-domain = { path = "../cairn-domain" }
cairn-store = { path = "../cairn-store" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
aes-gcm = "0.10"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
cairn-store = { path = "../cairn-store", features = ["sqlite"] }
cairn-evals = { path = "../cairn-evals" }
cairn-api = { path = "../cairn-api" }
cairn-memory = { path = "../cairn-memory" }

[features]
default = []

