[package]
name = "cairn-runtime"
version = "0.1.0"
edition = "2021"
license = "Proprietary"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
cairn-domain = { path = "../cairn-domain" }
cairn-providers = { path = "../cairn-providers" }
cairn-store = { path = "../cairn-store" }
cairn-plugin-catalog = { path = "../cairn-plugin-catalog" }
cairn-plugin-proto = { path = "../cairn-plugin-proto" }
cairn-graph = { path = "../cairn-graph" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
aes-gcm = "0.10"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "process"] }
cairn-store = { path = "../cairn-store", features = ["sqlite"] }
cairn-evals = { path = "../cairn-evals" }
cairn-api = { path = "../cairn-api" }
cairn-memory = { path = "../cairn-memory" }

[features]
default = []
