[package]
name = "cairn-skills"
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"
publish = false

[lib]
path = "src/lib.rs"

[features]
# Exposes internal cache-reset helpers (e.g. `__clear_activated_sets_for_tests`)
# to integration tests. Not intended for production consumers. Enable only
# from `[dev-dependencies]` or test-harness crates.
test-utils = []

[dependencies]
cairn-domain        = { path = "../cairn-domain" }
cairn-tools         = { path = "../cairn-tools" }
cairn-harness-tools = { path = "../cairn-harness-tools" }

# Upstream harness-skill (crates.io, 0.1.0 published 2026-04-22).
harness-core  = "0.1"
harness-skill = "0.1"

async-trait = "0.1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["rt", "macros", "sync"] }
tracing     = "0.1"
once_cell   = "1"

[dev-dependencies]
cairn-skills = { path = ".", features = ["test-utils"] }
tempfile     = "3"
tokio        = { version = "1", features = ["rt", "macros", "rt-multi-thread", "time"] }
