[package]
name = "cairn-store"
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
cairn-domain = { path = "../cairn-domain" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "json"], optional = true }

[dependencies.tokio]
version = "1"
features = ["sync"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[features]
default = []
postgres = ["sqlx", "sqlx/postgres"]
sqlite = ["sqlx", "sqlx/sqlite"]

