[package]
name = "cairn-tools"
version = "0.1.0"
edition = "2021"
license = "Proprietary"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
cairn-domain = { path = "../cairn-domain" }
cairn-graph  = { path = "../cairn-graph" }
cairn-plugin-proto = { path = "../cairn-plugin-proto" }
cairn-runtime = { path = "../cairn-runtime" }
cairn-store   = { path = "../cairn-store" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest  = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio    = { version = "1",    features = ["process", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "process", "time"] }

